# mylargeproject

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_SUMMARY.md  README.md  vcpkg.json
project/01_demo_qt5_cmake_vcpkg/: CMakeLists.txt  main.cpp
project/02_demo_my_large_project/: CMakeLists.simple.txt  CMakeLists.txt  main.cpp  simple_test.cpp
project/03_demo_mvvm/: CMakeLists.txt  README.md  main.cpp  resources.qrc
project/03_demo_mvvm/include/: mvvm_core.h
project/03_demo_mvvm/include/model/: UserModel.h
project/03_demo_mvvm/include/view/: ConsoleView.h  MainWindow.h
project/03_demo_mvvm/include/viewmodel/: UserViewModel.h
project/03_demo_mvvm/src/: mvvm_core.cpp
project/03_demo_mvvm/src/model/: UserModel.cpp
project/03_demo_mvvm/src/view/: ConsoleView.cpp  MainWindow.cpp
project/03_demo_mvvm/src/viewmodel/: UserViewModel.cpp
tools/: setup.bat  setup.py  setup.sh
